# smartcamera

./: LICENSE  README.md
2d-object-tracking/client/: CMakeLists.txt
2d-object-tracking/client/configData/: config.ini
2d-object-tracking/client/src/: main.cpp
2d-object-tracking/client/src/detector/: Detector.cpp  Detector.h
2d-object-tracking/client/src/tracker/: ParticleFilter.cpp  ParticleFilter.h  Tracker.cpp  Tracker.h
2d-object-tracking/rpc/: CMakeLists.txt  threshold_contours.thrift
2d-object-tracking/server/: CMakeLists.txt
2d-object-tracking/server/cfg/: server.json
2d-object-tracking/server/src/: application.cpp  threshold-contours-handler.cpp  threshold-contours-handler.h
glipf/: .gitignore  CMakeLists.txt
glipf/doc/: .gitignore  Doxyfile  build-instructions.md  cross-compilation.md  frame-sources.md  main-page.md
glipf/include/glipf/gles-utils/: dump-to-image.h  gles-context.h  glsl-program-builder.h  shader-builder.h  texture-container.h
glipf/include/glipf/processors/: background-subtraction-processor.h  color-space-conversion-processor.h  copy-processor.h  foreground-coverage-processor.h  foreground-histogram-processor.h  gles-processor.h  model-debug-processor.h  model-occlusion-processor.h  norm-dist-bg-sub-processor.h  processing-result.h  threshold-processor.h
glipf/include/glipf/sinks/: display-sink.h  sink.h
glipf/include/glipf/sources/: frame-properties.h  frame-source.h  opencv-camera.h  opencv-video-source.h  v4l2-camera.h
glipf/include/glipf/utils/: timer.h
glipf/src/gles-utils/: dump-to-image.cpp  gles-context.cpp  glsl-program-builder.cpp  shader-builder.cpp  texture-container.cpp
glipf/src/glsl/: active-pixel-count.frag  active-pixel-count.vert  background-subtraction.frag  color-space-conversion.frag  display.vert  foreground-coverage.frag  histogram-foreground.frag  histogram-scatter.vert  noop.frag  standard.vert  threshold.frag  transformation.vert  unit-value.frag
glipf/src/glsl/include/: background-foreground.frag  color-space.frag
glipf/src/glsl/model-debug/: model-color.frag  transformation.vert
glipf/src/glsl/model-occlusion/: model-color.frag  transformation.vert
glipf/src/glsl/norm-dist-bg-sub/: subtraction.frag
glipf/src/processors/: background-subtraction-processor.cpp  color-space-conversion-processor.cpp  copy-processor.cpp  foreground-coverage-processor.cpp  foreground-histogram-processor.cpp  gles-processor.cpp  model-debug-processor.cpp  model-occlusion-processor.cpp  norm-dist-bg-sub-processor.cpp  threshold-processor.cpp
glipf/src/sinks/: display-sink.cpp
glipf/src/sources/: frame-properties.cpp  opencv-camera.cpp  opencv-video-source.cpp  v4l2-camera.cpp
glipf/src/utils/: timer.cpp
human-tracking/client/: CMakeLists.txt  config.ini
human-tracking/client/Modules/: FindEigen3.cmake  Findlibgsl.cmake
human-tracking/client/configData/: config.ini
human-tracking/client/src/: CMakeLists.txt  application.cpp  main.cpp
human-tracking/client/src/application/: Application.cpp  Application.h
human-tracking/client/src/detection/: Detector.cpp  Detector.h
human-tracking/client/src/middleware/: IpuInterface.cpp  IpuInterface.h
human-tracking/client/src/tracking/: ParticleFilter.cpp  ParticleFilter.h  Tracker.cpp  Tracker.h
human-tracking/rpc/: CMakeLists.txt  glipf.thrift
human-tracking/server/: CMakeLists.txt
human-tracking/server/cfg/: server.json
human-tracking/server/src/: application.cpp  glipf-server-handler.cpp  glipf-server-handler.h
